# hermes-shield

./: .gitignore  LICENSE  README.md  analytics.py  coverage.xml  email_injection_detector.py  hermes_cli.py  hermes_shield.py  hermes_shield_install.py  layer2_semantic.py  pyproject.toml  rate_limiter.py  shield_integration.py  shielded_agent.py  sonar-project.properties  ssrf_threat_intel.json  tool_call_detector.py
.github/workflows/: ci.yml
tests/: test_analytics.py  test_email_injection.py  test_injection_bench.py  test_injections.py  test_multilang.py  test_patch_eval.py  test_shield.py  test_shield_pocs.py  test_shielded_agent.py
